# quarto-graft

./: .gitignore  .nojekyll  Makefile  README.md  api-reference.html  chapter-builds.json  contributing.html  getting-started.html  grafts.yaml  index.html  operations.html  playbook.html  pyproject.toml  ruff.toml  search.json  setup-graft.html  setup-trunk.html  workflow.html
.github/workflows/: build_python_wheel_pure.yml  build_quarto_docs.yml  build_release_flow.yml  build_uv_python_wheel_pure.yml  publish_pypi.yml  publish_release.yml  publish_uv_pypi.yml  quarto-book-ci.yaml  quarto-build.yaml
appendix/: glossary.html
chapters__/chapter1/: data.html  index.html  section1.html  section1_sub.html  section2.html  section2_sub.html
chapters__/chapter11/: data.html  index.html  section1.html  section1_sub.html  section2.html  section2_sub.html
chapters__/chapter13/: another.html  index.html  section2.html  section2_sub.html
docs/: _quarto.yaml  api-reference.qmd  contributing.qmd  index.qmd  notebook.ipynb  playbook.qmd  setup-graft.qmd  setup-trunk.qmd
docs/appendix/: glossary.qmd
grafts__/chapter1/: data.html  index.html  section1.html  section1_sub.html  section2.html  section2_sub.html
grafts__/chapter11/: data.html  index.html  section1.html  section1_sub.html  section2.html  section2_sub.html
grafts__/chapter66/: data.html  index.html  section1.html  section1_sub.html  section2.html  section2_sub.html
grafts__/chapter77/: data.html  index.html  section1.html  section1_sub.html  section2.html  section2_sub.html
intro/: readme.html
(+35 files in other folders)
