[project]
name = "quarto-python-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jr200", email = "jayshan+git@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
quarto-python-demo = "quarto_python_demo.main:main"

[build-system]
requires = ["uv_build>=0.9.14,<0.10.0"]
build-backend = "uv_build"
