[project]
name = "quarto-graft"
version = "0.1.0"
description = "Quarto GitHub Pages branch graft tool"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
  "quarto>=0.1.0",
  "quarto-cli>=1.8.26",
  "ruamel-yaml>=0.18.16",
  "Jinja2>=3.1",
  "marimo>=0.18.4",
  "ruff>=0.14.8",
  "packaging>=25.0",
  "uv>=0.9.17",
]

[project.scripts]
trunk-build = "quarto_graft.cli:build_trunk_main"
trunk-lock = "quarto_graft.quarto_config:apply_manifest"
graft-build = "quarto_graft.cli:build_graft_main"
graft-new = "quarto_graft.cli:new_graft_main"
graft-get = "quarto_graft.cli:graft_get_main"
graft-cleanup-orphans = "quarto_graft.cli:cleanup_worktrees_main"
graft-destroy = "quarto_graft.cli:graft_destroy_main"
graft-list = "quarto_graft.cli:graft_list_main"

[build-system]
requires = ["uv_build>=0.9.14,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
per-file-ignores = { "templates/py/pyproject.toml" = ["ALL"], "templates/py-jupyter/pyproject.toml" = ["ALL"], "templates/py-marimo/pyproject.toml" = ["ALL"] }
